- Changing freightRate name throughout all the project - Removing Mixin classes; - Adding assembler package to use DTO classes for Assemblers and Disassemblers; - Adding Model DTO and Input to manipulate objects; - Refactoring controller classes to adapt to DTO and Input classes.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -5,16 +5,16 @@ ZeroValueIncludeDescription={1} must contains the description {2}
 
 #Possibilitie to change the returned message
 #javax.validation.constraints.PositiveOrZero.message=must be a positive number
-FreighRate.invalid={0} is invalid. Inform a positive value
+FreightRate.invalid={0} is invalid. Inform a positive value
 
 kitchen.name=Kitchen name
 kitchen.id=Kitchen id
 
-NotNull.restaurant.freighRate={0} is required
-NotNull.restaurant.kitchen={0} is required
-restaurant.name=Restaurant name
-restaurant.kitchen=Restaurant kitchen
-restaurant.freighRate=Restaurant freigh rate
+NotNull.restaurantInput.freightRate={0} is required
+NotNull.restaurantInput.kitchen={0} is required
+restaurantInput.name=Restaurant name
+restaurantInput.kitchen=Restaurant kitchen
+restaurantInput.freightRate=Restaurant freight rate
 
 city.name=City name
 city.id=City id
