Adding PaymentWay funtionalities with controller, service, repository, DTO with assemblers, Exceptions.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -16,6 +16,10 @@ restaurantInput.name=Restaurant name
 restaurantInput.kitchen=Restaurant kitchen
 restaurantInput.freightRate=Restaurant freight rate
 
+NotBlank.paymentWayInput.description={0} is required
+paymentWayInput.id=Payment way code
+paymentWayInput.description=Payment way description
+
 city.name=City name
 city.id=City id
 
