Adding User, Team and Address, functionalities with controller, service, repository, DTO with assemblers, Exceptions. Customizing detach functionality to CustomizedJpaRepository to remove entity of JPA context.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -20,6 +20,14 @@ NotBlank.paymentWayInput.description={0} is required
 paymentWayInput.id=Payment way code
 paymentWayInput.description=Payment way description
 
+address=Address
+address.street=Street
+address.number=Number
+address.district=District
+address.city=City
+address.city.id=City id
+address.cep=CEP
+
 city.name=City name
 city.id=City id
 
