Adding an endpoint CRUD for Restaurant/User, User/Team and Team/Permission. Adding new table for Restaurant/User.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -28,6 +28,16 @@ address.city=City
 address.city.id=City id
 address.cep=CEP
 
+#Product
+productInput.name=Product name
+productInput.description=Product description
+productInput.price=Product price
+productInput.active=Product status
+
+#Permissions
+permissionInput.name=Permission name
+permissionInput.description=Permission description
+
 city.name=City name
 city.id=City id
 
