Adding an endpoint CRUD for ItemOrder and PurchaseOrder. Adding a mapper skip on ModelMapperConfig to fix a detached exception. Adding cascade = CascadeType.ALL on items of PurchaseOrder to register ordered items.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -44,3 +44,17 @@ city.id=City id
 state.name=State name
 state.id=State id
 
+NotNull.purchaseOrderInput.items.productId=Product code in item is required
+NotNull.purchaseOrderInput.items.quantity=Quantity in item is required
+Size.purchaseOrderInput.items=The purchase order must have at least one item
+purchaseOrderInput.restaurant=Restaurant
+purchaseOrderInput.paymentWay=Payment way
+purchaseOrderInput.address=Delivery address
+purchaseOrderInput.items=Purchase order items
+deliveryAddress.street=Delivery address street
+deliveryAddress.number=Delivery address street number
+deliveryAddress.city=Delivery address city
+deliveryAddress.city.id=Delivery address code city
+deliveryAddress.cep=Delivery address CEP
+deliveryAddress.district=Delivery address district
+
