Adding Squiggly library for request with filters for purchase order.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -2,6 +2,8 @@ NotBlank={0} is required
 NotNull={0} is required
 #PositiveOrZero={0} must be a positive value
 ZeroValueIncludeDescription={1} must contains the description {2}
+typeMismatch.java.time.OffsetDateTime={0} must be a valid date-hour
+typeMismatch.java.lang.Long={0} must be a valid number
 
 #Possibilitie to change the returned message
 #javax.validation.constraints.PositiveOrZero.message=must be a positive number
@@ -58,3 +60,7 @@ deliveryAddress.city.id=Delivery address code city
 deliveryAddress.cep=Delivery address CEP
 deliveryAddress.district=Delivery address district
 
+purchaseOrderFilter.registrationDateInitial=Purchase order initial date
+purchaseOrderFilter.registrationDateFinal=Purchase order final date
+purchaseOrderFilter.clientId=Client id
+purchaseOrderFilter.restaurantId=Restaurant id
