--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -64,3 +64,7 @@ purchaseOrderFilter.registrationDateInitial=Purchase order initial date
 purchaseOrderFilter.registrationDateFinal=Purchase order final date
 purchaseOrderFilter.clientId=Client id
 purchaseOrderFilter.restaurantId=Restaurant id
+
+dailySaleFilter.registrationDateInitial=Purchase order initial date
+dailySaleFilter.registrationDateFinal=Purchase order final dat
+dailySaleFilter.restaurantId=Restaurant id
