Adding endpoint to store, remove and serve product photos. Implementing a local storage service to save photos. Treating the accepted media types for finding photos.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -68,3 +68,8 @@ purchaseOrderFilter.restaurantId=Restaurant id
 dailySaleFilter.registrationDateInitial=Purchase order initial date
 dailySaleFilter.registrationDateFinal=Purchase order final dat
 dailySaleFilter.restaurantId=Restaurant id
+
+productPhotoInput.file=Photo file
+productPhotoInput.description=Photo description
+FileSize.productPhotoInput.file=Product photo max file size must be {1}
+FileContentType.file=Product file must be a JPG or PNG file
